[metadata]
name = alhazen-py
version = 0.0.1
description = Python version of the debugging tool Alhazen
author = Martin Eberlein
author_email = martin.eberlein@hu-berlin.de
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/martineberlein/alhazen-py
project_urls =
    Bug Tracker = https://github.com/martineberlein/alhazen-py/issues
license = MIT License
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Testing

[options]
install_requires =
    fuzzingbook~=1.1
    isla-solver~=1.10
    islearn>=0.2.10
    shap>=0.41
    lightgbm>=3.3.2
    z3-solver>=4.10.2.0
    pandas~=1.4.4
    numpy~=1.23.2
    scikit-learn~=1.1.2
packages = find:
package_dir = =src

[options.extras_require]
dev =
    pytest>=7.2.0
    twine
    black

[options.packages.find]
where = ./src
